# Nickel-Browser

./: .chromium_version  .editorconfig  .gitignore  ARCHITECTURE.md  BASELINE_STATS.txt  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  EMERGENCY_FIX_BASELINE.txt  FUNDING.yml  LICENSE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  TESTING.md  THREAT_MODEL.md  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: BUILD.md  BUILD_SOURCE.md  PRIVACY_POLICY.md  SELF_HOSTED_RUNNER.md  _config.yml  index.html
patches/: 0001-nickel-branding.patch  0001-remove-google-api-keys.patch  0002-disable-safe-browsing-ping.patch  series  (+30 more)
src/components/nickel_adblock/: BUILD.gn  adblock_engine.cc  adblock_engine.h  adblock_engine_unittest.cc  adblock_filter_list.h  adblock_throttle.cc  adblock_throttle.h
src/nickel/: BUILD.gn
src/nickel/browser/: nickel_browser_main_extra_parts.cc  nickel_browser_main_extra_parts.h
src/nickel/browser/tor/: tor_process_service.cc  tor_process_service.h
src/nickel/components/nickel_adblock/: adblock_service.cc  adblock_service.h
src/nickel/patches/nickel/: 0001-nickel-branding.patch  0002-nickel-user-agent.patch  0003-nickel-default-prefs.patch  0005-nickel-new-tab-page.patch  0010-nickel-build-integration.patch  0012-nickel-wire-ntp.patch  0013-nickel-build-deps.patch  0014-nickel-wire-fingerprint.patch
src/nickel/renderer/: fingerprint_randomizer.cc  fingerprint_randomizer.h
src/nickel/test/: nickel_adblock_unittest.cc  nickel_fingerprint_unittest.cc  nickel_tor_unittest.cc
(+48 files in other folders)
