# Copyright (c) 2026 Nickel Browser Project
# Use of this source code is governed by a BSD-3-Clause license.

import("//build/config/features.gni")

source_set("nickel_browser") {
  sources = [
    "browser/nickel_browser_main_extra_parts.cc",
    "browser/nickel_browser_main_extra_parts.h",
    "browser/tor/tor_process_service.cc",
    "browser/tor/tor_process_service.h",
    "components/nickel_adblock/adblock_service.cc",
    "components/nickel_adblock/adblock_service.h",
  ]
  deps = [
    "//base",
    "//content/public/browser",
  ]
}

source_set("nickel_renderer") {
  sources = [
    "renderer/fingerprint_randomizer.cc",
    "renderer/fingerprint_randomizer.h",
  ]
  deps = [
    "//base",
    "//content/public/renderer",
    "//third_party/blink/public/web",
    "//v8",
  ]
}
